# arm-fault-simulator

./: README.md  meson.build
src/: main.cpp
subprojects/armory/include/armory/: fault_simulator.h  register_fault_model.h
subprojects/armory/src/: fault_simulator.cpp  register_fault_model.cpp  simulate_instruction_fault.cpp  simulate_register_fault.cpp
subprojects/armory_cli/: meson.build
subprojects/armory_cli/include/armory_cli/: armory_cli.h  configuration.h  fault_printing.h
subprojects/armory_cli/src/: armory_cli.cpp  fault_models.cpp  fault_printing.cpp  meson.build
subprojects/fault_simulator/include/fault_simulator/: configuration.h
subprojects/fault_simulator/src/: fault_simulator.cpp
subprojects/m-ulator/src/: emulator_base.cpp  emulator_execution.cpp  instruction_decoder.cpp
